--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.4",
     "express": "^4.14.0",
+    "faker": "^4.1.0",
     "jquery": "^3.1.1",
+    "mongodb": "^3.0.4",
     "mongoose": "^4.6.4",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -32,6 +34,7 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^22.4.1",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.26.0",
