Create script for initializing marzagat db with tables

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "jest",
     "start": "node ./server/index.js",
     "dockertest": "npm run seed-database && npm start",
-    "docker": "DB_ADDRESS=database npm run seed-database && DB_ADDRESS=database npm start"
+    "docker": "DB_ADDRESS=database npm run seed-database && DB_ADDRESS=database npm start",
+    "create-pg-db": "psql postgres -f ./db/schema.sql"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -28,6 +29,7 @@
     "jquery": "^3.1.1",
     "mongodb": "^3.0.4",
     "mongoose": "^4.6.4",
+    "pg-promise": "^8.2.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "request": "^2.83.0",
