--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
+    "dotenv-webpack": "^1.5.5",
     "express": "^4.14.0",
     "faker": "^4.1.0",
     "jquery": "^3.1.1",
     "mongodb": "^3.0.4",
     "mongoose": "^4.6.4",
+    "pg": "^7.4.1",
     "pg-promise": "^8.2.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
