--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.1.1",
     "mongodb": "^3.0.4",
     "mongoose": "^4.6.4",
+    "newrelic": "^3.2.0",
     "pg": "^7.4.1",
     "pg-promise": "^8.2.2",
     "react": "^15.6.2",
