--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg-promise": "^8.2.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
